traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  while(!(getDirection() == Direction.EST))
  ^Snake:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
        {gauche()}
        ^Snake:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (!(estFaceMur()))
  ^Snake:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
        {res=false}
        ^Snake:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  gauche()
  ^Snake:15: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (!(estFaceMur()))
  ^Snake:17: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
        {res=false}
        ^Snake:19: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  droite()
  ^Snake:21: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return(res)  
  ^